--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 
 {
-  "name": "dokument-site",
-  "version": "0.1.0",
+  "name": "dokument-multipage",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
